--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,8 @@
 development:
   adapter: postgresql
   host: localhost
-  username: user
-  database: app-dev
+  username: ke_kirr
+  database: testdb
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
