--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,7 +8,15 @@
 UserPerson:
   email: kkirr77@yahoo.com
   encrypted_password: <%= User.new.send(:password_digest, 'passsword') %>
-# column: value
-#
-two: {}
+  role: author
+
+author:
+  email: author@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  role: author
+
+editor:
+  email: editor@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  role: editor
 #  column: value
