update comments https://app.asana.com/0/11169835259596/11423458506252

--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,7 +1,5 @@
-cr:
-  title: Code Rails
-  body: this is the body
-  author: UserPerson
-  published: true
-
+karen_comment:
+  author: karen_comment
+  author_url: http://troll.example.com
+  author_email: karen@troll.example.com
 
