--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,9 +6,9 @@
 # below each fixture, per the syntax in the comments below
 #
 UserPerson:
-  email: kkirr77@yahoo.com
-  encrypted_password: <%= User.new.send(:password_digest, 'passsword') %>
-  role: author
+  email: UserPerson@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  role: editor
 
 author:
   email: author@example.com
